Adaschma's default apps

--- a/defaultapps_banglejs2.json
+++ b/defaultapps_banglejs2.json
@@ -1,1 +1,2 @@
-["boot","launch","antonclk","health","setting","about","widbat","widbt","widlock","widid"]
+["boot","launch","antonclk","health","setting","about","widbat","widbt","widlock","widid",
+ "lcars", "cprassist", "todolist", "sleeplog", "heartzone", "powermanager", "ptlaunch", "widbars", "lapcounter", "android", "notifyfs"]
